# Ferrum-Engine

./: .gitignore  CMakeLists.txt  compile_flags.txt  imgui.ini
resources/shaders/: core.frag  core.vert  imgui.ini
src/: FerrumEngine.hpp  imgui.ini  main.cpp
src/algorithms/: Guillotine.cpp  Guillotine.hpp
src/entity/: Entity.cpp  Entity.hpp  EntitySystem.cpp  EntitySystem.hpp  PlayerEntity.cpp  PlayerEntity.hpp
src/game/: Chunk.cpp  Chunks.cpp  Chunks.hpp  GameContext.cpp  GameContext.hpp  GameObject.cpp  GameObject.hpp  GameProperties.hpp
src/game/animation/: AnimationInfo.hpp  AnimationSequence.hpp  SpriteAnimator.cpp  SpriteAnimator.hpp
src/game/entity/: Entities.hpp  Entity.cpp  Entity.hpp  EntitySystem.cpp  EntitySystem.hpp  PlayerEntity.cpp
src/game/level/: Chunk.cpp  (+7 more)
src/graphics/: Camera.cpp  Camera.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  DrawContext.cpp  DrawContext.hpp  Drawable.hpp  EntityRenderer.cpp  EntityRenderer.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture_loader.cpp  VertexBufferDescriptor.hpp  imgui.ini
src/math/: MatrixUtils.hpp
src/physics/: Collider.hpp  GridCollider.cpp  GridCollider.hpp  HitBox.cpp  HitBox.hpp  RigidBody.cpp  RigidBody.hpp
src/structures/: TagGroup.hpp
src/window/: Context.hpp  Events.cpp  Events.hpp  Window.cpp  Window.hpp
src/world/: Chunk.hpp  Chunk2d.cpp  Chunk2d.hpp  Chunks.cpp  Chunks.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  GameContext.cpp  GameContext.hpp  Player.cpp  Player.hpp  Tile.hpp
(+89 files in other folders)
